--- a/.github/workflows/01-manual-exec.yaml
+++ b/.github/workflows/01-manual-exec.yaml
@@ -14,28 +14,28 @@ jobs:
   e2e-tests:
 
     #maquina que o job vai executar
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
 
     # passos do script de build
-    steps:
-      #clone do projeto
-      - uses: actions/checkout@v4
-      # instalação do node
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22.x
-      # instalação do Yarn
-      - name: Instalando Yarn
-        run: npm install -q yarn
+  steps:
+    #clone do projeto
+    - uses: actions/checkout@v4
+    # instalação do node
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 22.x
+    # instalação do Yarn
+    - name: Instalando Yarn
+      run: npm install -q yarn
 
-      # instalação das dependencias
-      - name: Instalando dependencias
-        run: yarn
+    # instalação das dependencias
+    - name: Instalando dependencias
+      run: yarn
 
-      # instalação do playwright
-      - name: Instalando playwright
-        run: yarn playwright install
+    # instalação do playwright
+    - name: Instalando playwright
+      run: yarn playwright install
 
-      # executar os testes e2e
-      - name: Executando Testes e2e
-        run: yarn run e2e
+    # executar os testes e2e
+    - name: Executando Testes E2E
+      run: yarn run E2E
