--- a/.github/workflows/01-manual-exec.yaml
+++ b/.github/workflows/01-manual-exec.yaml
@@ -17,25 +17,26 @@ jobs:
     runs-on: ubuntu-latest
 
     # passos do script de build
-  steps:
-    #clone do projeto
-    - uses: actions/checkout@v4
-    # instalação do node
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 22.x
-    # instalação do Yarn
-    - name: Instalando Yarn
-      run: npm install -q yarn
+    steps:
+      #clone do projeto
+      - uses: actions/checkout@v4
+      # instalação do node
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
 
-    # instalação das dependencias
-    - name: Instalando dependencias
-      run: yarn
+      # instalação do Yarn
+      - name: Instalando Yarn
+        run: npm install -g yarn
 
-    # instalação do playwright
-    - name: Instalando playwright
-      run: yarn playwright install
+      # instalação das dependencias
+      - name: Instalando dependencias
+        run: yarn
 
-    # executar os testes e2e
-    - name: Executando Testes E2E
-      run: yarn run E2E
+      # instalação do playwright
+      - name: Instalando playwright
+        run: yarn playwright install
+
+      # executar os testes e2e
+      - name: Executando Testes E2E
+        run: yarn run e2e
